force-app/main/default/objects/GD_POS_Order__c/GD_POS_Order__c.object-meta.xml
<CustomObject>
    <description>Global Distributor POS Order object.</description>
    <label>GD POS Order</label>
    <nameField>
        <label>GD POS Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GD POS Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>