force-app/main/default/objects/GD_POS_Order__c/fields/Design_Region_CS_CHF__c.field-meta.xml
<CustomField>
    <fullName>Design_Region_CS_CHF__c</fullName>
    <formula>Design_Region_CS_Pct__c * u_blox_Total_Contribution_CHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Design Region CS CHF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>