force-app/main/default/objects/GD_POS_Order__c/fields/Design_uB_Office__c.field-meta.xml
<CustomField>
    <fullName>Design_uB_Office__c</fullName>
    <inlineHelpText>Design uB Office = Revenue Region</inlineHelpText>
    <label>Design uB Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>uB_Office</valueSetName>
    </valueSet>
</CustomField>