force-app/main/default/objects/GD_POS_Order__c/fields/Distributor_Account__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Distributor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GD POS Orders</relationshipLabel>
    <relationshipName>GD_POS_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>