force-app/main/default/objects/GD_POS_Order__c/fields/Distributor_Margin__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Margin__c</fullName>
    <formula>Distributor_Total_Sales__c - u_blox_Total_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>