force-app/main/default/objects/GD_POS_Order__c/fields/Distributor_Margin_Pct__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Margin_Pct__c</fullName>
    <formula>if(Distributor_Total_Sales__c = 0 , 0, Distributor_Margin__c / Distributor_Total_Sales__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Margin [%]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>