force-app/main/default/objects/GD_POS_Order__c/fields/Distributor_POS_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_POS_Name__c</fullName>
    <label>Distributor POS Name</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>