force-app/main/default/objects/GD_POS_Order__c/fields/Distributor_Reporting_Region__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Reporting_Region__c</fullName>
    <formula>TEXT(Distributor_Account__r.Reporting_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Reporting Region</label>
    <type>Text</type>
</CustomField>