force-app/main/default/objects/GD_POS_Order__c/fields/Distributor_Total_Sales__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Total_Sales__c</fullName>
    <label>Distributor Total Sales</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>