force-app/main/default/objects/GD_POS_Order__c/fields/Distributor_Total_Sales_CHF__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Total_Sales_CHF__c</fullName>
    <formula>IF(ISPICKVAL(CurrencyIsoCode, &quot;USD&quot;),  USDtoCHF__c * Distributor_Total_Sales__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Total Sales CHF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>