force-app/main/default/objects/GD_POS_Order__c/fields/End_Customer_Price_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Price_Per_Unit__c</fullName>
    <formula>Distributor_Total_Sales__c / Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Customer Price Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>