force-app/main/default/objects/GD_POS_Order__c/fields/IPR_Coverage__c.field-meta.xml
<CustomField>
    <fullName>IPR_Coverage__c</fullName>
    <label>IPR Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IPR_Coverage</valueSetName>
    </valueSet>
</CustomField>