force-app/main/default/objects/GD_POS_Order__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>GD POS Orders</relationshipLabel>
    <relationshipName>GD_POS_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>