force-app/main/default/objects/GD_POS_Order__c/fields/Project_Owner_Account__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Account__c</fullName>
    <label>Project Owner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GD POS Orders (Project Owner Account)</relationshipLabel>
    <relationshipName>GD_POS_Orders_Project_Owner_Account</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>