force-app/main/default/objects/GD_POS_Order__c/fields/Project_Owner_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Account_Owner__c</fullName>
    <formula>Project_Owner_Account__r.Owner.FirstName&amp;&quot; &quot;&amp;Project_Owner_Account__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Owner Account Owner</label>
    <type>Text</type>
</CustomField>