force-app/main/default/objects/GD_POS_Order__c/fields/Project_Owner_Reporting_Region__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Reporting_Region__c</fullName>
    <formula>TEXT(Project_Owner_Account__r.Reporting_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Owner Reporting Region</label>
    <type>Text</type>
</CustomField>