force-app/main/default/objects/GD_POS_Order__c/fields/Shipping_Region_CS_CHF__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Region_CS_CHF__c</fullName>
    <formula>Shipping_Region_CS_Pct__c * u_blox_Total_Contribution_CHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Region CS CHF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>