force-app/main/default/objects/GD_POS_Order__c/fields/Shipping_Region_CS_Pct__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Region_CS_Pct__c</fullName>
    <label>Shipping Region CS %</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>