force-app/main/default/objects/GD_POS_Order__c/fields/Shipping_Region_CS_Value__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Region_CS_Value__c</fullName>
    <formula>(Shipping_Region_CS_Pct__c * u_blox_Total_Contribution_CHF__c)/USDtoCHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Region CS $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>