force-app/main/default/objects/GD_POS_Order__c/fields/Shipping_uB_Office__c.field-meta.xml
<CustomField>
    <fullName>Shipping_uB_Office__c</fullName>
    <label>Shipping uB Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>uB_Office</valueSetName>
    </valueSet>
</CustomField>