force-app/main/default/objects/GD_POS_Order__c/fields/Total_COGS_CHF__c.field-meta.xml
<CustomField>
    <fullName>Total_COGS_CHF__c</fullName>
    <label>Total COGS CHF</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>