force-app/main/default/objects/GD_POS_Order__c/fields/Transfer_Price_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Price_Per_Unit__c</fullName>
    <formula>u_blox_Total_Sales__c / Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transfer Price Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>