force-app/main/default/objects/GD_POS_Order__c/fields/u_blox_Total_Contribution__c.field-meta.xml
<CustomField>
    <fullName>u_blox_Total_Contribution__c</fullName>
    <formula>u_blox_Total_Contribution_CHF__c/USDtoCHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>u-blox Total Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>