force-app/main/default/objects/GD_POS_Order__c/fields/u_blox_Total_Sales__c.field-meta.xml
<CustomField>
    <fullName>u_blox_Total_Sales__c</fullName>
    <inlineHelpText>See Design uB Office to get Revenue region.</inlineHelpText>
    <label>u-blox Total Sales</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>