force-app/main/default/objects/GD_POS_Order__c/fields/u_blox_Total_Sales_CHF__c.field-meta.xml
<CustomField>
    <fullName>u_blox_Total_Sales_CHF__c</fullName>
    <formula>CASE(text(CurrencyIsoCode),
&quot;USD&quot;,  u_blox_Total_Sales__c  *  USDtoCHF__c ,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>u-blox Total Sales CHF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>