force-app/main/default/objects/GD_POS_Order__c/fields/USDtoCHF__c.field-meta.xml
<CustomField>
    <fullName>USDtoCHF__c</fullName>
    <label>USDtoCHF</label>
    <precision>10</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>