force-app/main/default/objects/GD_POS_Order__c/fields/Use_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Use_Restriction__c</fullName>
    <label>Use Restriction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Use_Restriction</valueSetName>
    </valueSet>
</CustomField>