force-app/main/default/objects/GD_POS_Order__c/validationRules/Mandatory_IPR_for_Cellular_Products.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_IPR_for_Cellular_Products</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Product_Center__c = &apos;Cellular&apos;,
OR(
ISPICKVAL(IPR_Coverage__c,&apos;&apos;),
ISPICKVAL(Use_Restriction__c,&apos;&apos;)
)
)</errorConditionFormula>
    <errorDisplayField>Use_Restriction__c</errorDisplayField>
    <errorMessage>IPR Coverage and Use Restriction are mandatory fields.</errorMessage>
</ValidationRule>