force-app/main/default/objects/GD_POS_Order__c/validationRules/Product_as_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_as_mandatory</fullName>
    <active>true</active>
    <description>Product is mandatory field.</description>
    <errorConditionFormula>ISBLANK(Product__c)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Product is mandatory field.</errorMessage>
</ValidationRule>