force-app/main/default/objects/GD_POS_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Distributor_Account__c</columns>
    <columns>Project_Owner_Account__c</columns>
    <columns>Project_Owner_Account_Owner__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>u_blox_Total_Sales__c</columns>
    <columns>Design_uB_Office__c</columns>
    <columns>Shipping_uB_Office__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>