force-app/main/default/objects/GD_POS_Order__c/listViews/Future_Electronics.listView-meta.xml
<ListView>
    <fullName>Future_Electronics</fullName>
    <columns>NAME</columns>
    <columns>Distributor_Account__c</columns>
    <columns>Project_Owner_Account__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>u_blox_Total_Sales__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Shipping_uB_Office__c</columns>
    <columns>Design_uB_Office__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Distributor_Account__c</field>
        <operation>contains</operation>
        <value>Future Electronics Inc.</value>
    </filters>
    <label>Future</label>
    <sharedTo>
        <group>Sales_Admins_GD</group>
    </sharedTo>
</ListView>