force-app/main/default/objects/GD_POS_Order__c/listViews/Mouser_Electronics.listView-meta.xml
<ListView>
    <fullName>Mouser_Electronics</fullName>
    <columns>NAME</columns>
    <columns>Distributor_Account__c</columns>
    <columns>Project_Owner_Account__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>u_blox_Total_Sales__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Distributor_Account__c</field>
        <operation>equals</operation>
        <value>Mouser Electronics</value>
    </filters>
    <label>Mouser</label>
    <sharedTo>
        <group>Sales_Admins_GD</group>
    </sharedTo>
</ListView>